add assets & variables

--- a/scss/settings/_variables.scss
+++ b/scss/settings/_variables.scss
@@ -1,7 +1,21 @@
-$main-font-1: 
-$main-font-2:
+$main-font-1: "Roboto Condensed", sans-serif;
+$main-font-2: "Roboto", sans-serif;
+$main-font-3: "Open Sans", sans-serif;
 
-$--white-: #ffffff;
-$--red-: #ff0000;
-$--red-2-: #ff00004d;
-$--black-: #000000;
+$--bg-color-: #f2f2f2;
+$--bg-btn-1: #e2b831;
+$--bg-btn-2: #fff;
+
+$--black-font-: #111;
+$--white-font-: #fff;
+
+$--bg-tile-1: #e2b831;
+$--bg-tile-2: #f1c634;
+$--bg-tile-3: #f5d654;
+$--bg-tile-4: #f9e79b;
+$--bg--footer-: #333;
+
+// <i class="fas fa-search-location"></i> analiza
+// <i class="fas fa-ruler-combined"></i> planowanie
+// <i class="fas fa-pencil-alt"></i> projektowanie
+// <i class="fas fa-house-user"></i> budowanie
