--- a/scss/settings/_variables.scss
+++ b/scss/settings/_variables.scss
@@ -2,18 +2,21 @@ $main-font-1: "Roboto Condensed", sans-serif;
 $main-font-2: "Roboto", sans-serif;
 $main-font-3: "Open Sans", sans-serif;
 
-$--bg-color-: #f2f2f2;
+$--black-font-: #111;
+$--white-font-: #fff;
+
+$--bg-main-: #f2f2f2;
+$--bg--footer-: #333;
 $--bg-btn-1: #e2b831;
 $--bg-btn-2: #fff;
 
-$--black-font-: #111;
-$--white-font-: #fff;
+$--btn-hover-1: #f1c634;
+$--btn-hover-2: #e6e6e6;
 
 $--bg-tile-1: #e2b831;
 $--bg-tile-2: #f1c634;
 $--bg-tile-3: #f5d654;
 $--bg-tile-4: #f9e79b;
-$--bg--footer-: #333;
 
 // <i class="fas fa-search-location"></i> analiza
 // <i class="fas fa-ruler-combined"></i> planowanie
