--- a/scss/settings/_mixins.scss
+++ b/scss/settings/_mixins.scss
@@ -21,3 +21,10 @@ $desktop-width: 1025px;
     @content;
   }
 }
+
+@mixin hamburger-line {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+  position: absolute;
+}
