--- a/scss/elements/_cta__button--open.scss
+++ b/scss/elements/_cta__button--open.scss
@@ -2,7 +2,7 @@
   display: block;
   text-align: center;
 
-  .btn--header {
+  .btn--open {
     display: inline-block;
     border: none;
     border-radius: 0;
@@ -13,7 +13,7 @@
     }
   }
 
-  .cta__btn--header {
+  .cta__btn--open {
     font-size: 1em;
     font: normal 700 1em $main-font-1;
     text-transform: uppercase;
