--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@ body {
 }
 
 @import "./settings/index";
-@import "./elements/navigation";
-@import "./elements/cta__button--header";
+@import "./elements/header";
+@import "./elements/cta__button--open";
 @import "./elements/cta__button--tile";
+@import "./elements/open";
