--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,6 @@ body {
 
 @import "./settings/index";
 @import "./elements/header";
-@import "./elements/cta__button--open";
+@import "./elements/cta__button--welcome";
 @import "./elements/cta__button--tile";
-@import "./elements/open";
+@import "./elements/welcome";
