--- a/scss/settings/_mixins.scss
+++ b/scss/settings/_mixins.scss
@@ -25,6 +25,6 @@ $desktop-width: 1025px;
 @mixin hamburger-line {
   width: 100%;
   height: 3px;
-  background-color: white;
+  background-color: #fff;
   position: absolute;
 }
