--- a/scss/settings/_variables.scss
+++ b/scss/settings/_variables.scss
@@ -4,6 +4,9 @@ $main-font-3: "Open Sans", sans-serif;
 
 $--black-font-: #111;
 $--white-font-: #fff;
+$--menu-font-: #a1a1a1;
+$--menu-hover-: rgba(255, 255, 255, 0.9);
+$--menu-icon-: #fff;
 
 $--bg-main-: #f2f2f2;
 $--bg--footer-: #333;
