add section footer

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,8 @@
 @import "./elements/cta__button--tile";
 @import "./elements/welcome";
 @import "./elements/services";
+@import "./elements/footer";
+
 * {
   box-sizing: border-box;
 }
