--- a/scss/settings/_variables.scss
+++ b/scss/settings/_variables.scss
@@ -7,6 +7,8 @@ $--white-font-: #fff;
 $--menu-font-: #a1a1a1;
 $--menu-hover-: rgba(255, 255, 255, 0.9);
 $--menu-icon-: #fff;
+$--footer-link-: #f1c634;
+$--footer-hover-: #d3f856;
 
 $--bg-main-: #f2f2f2;
 $--bg--footer-: #333;
