small changes and add content

--- a/scss/elements/_cta__button--tile.scss
+++ b/scss/elements/_cta__button--tile.scss
@@ -3,6 +3,7 @@
   border: none;
   border-radius: 0;
   padding: 1em 2em;
+  margin-bottom: 2rem;
   width: auto;
   &:hover {
     background-color: $--btn-hover-2;
