--- a/css/main.css
+++ b/css/main.css
@@ -579,6 +579,7 @@ textarea {
   border: none;
   border-radius: 0;
   padding: 1em 2em;
+  margin-bottom: 2rem;
   width: auto;
 }
 .btn--tile:hover {
@@ -721,7 +722,7 @@ textarea {
 }
 .services .tile__description {
   font: italic 400 1em "Open Sans", sans-serif;
-  margin: 2rem;
+  margin: 1.5rem;
 }
 
 .footer {
