--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,7 +19,7 @@ body {
   background: $--bg-main-;
 }
 
-.container {
-  margin: 0 auto;
-  width: 1088px;
-}
+// .container {
+//   margin: 0 auto;
+//   width: 1088px;
+// }
