--- a/scss/elements/_cta__button--welcome.scss
+++ b/scss/elements/_cta__button--welcome.scss
@@ -3,7 +3,7 @@
   border: none;
   border-radius: 0;
   padding: 1em 2em;
-  margin: 2.5rem 0 2.5rem 0;
+  margin: 1rem 0 2rem 1rem;
   width: auto;
   &:hover {
     background-color: $--btn-hover-1;
