--- a/scss/elements/_welcome.scss
+++ b/scss/elements/_welcome.scss
@@ -58,6 +58,7 @@
     .about__descryption {
       font: italic 400 1.5em $main-font-3;
       font-size: 1em;
+      margin: 0 1rem;
     }
   }
 }
