--- a/scss/elements/_welcome.scss
+++ b/scss/elements/_welcome.scss
@@ -53,6 +53,7 @@
     .about__title {
       font: normal 700 3.5em $main-font-1;
       text-transform: uppercase;
+      margin: 0 1rem;
     }
 
     .about__descryption {
