--- a/scss/elements/_welcome.scss
+++ b/scss/elements/_welcome.scss
@@ -59,7 +59,7 @@
     .about__descryption {
       font: italic 400 1.5em $main-font-3;
       font-size: 1em;
-      margin: 0 1rem;
+      margin: 1rem 1rem;
     }
   }
 }
