--- a/scss/elements/subpages/_contact.scss
+++ b/scss/elements/subpages/_contact.scss
@@ -15,6 +15,18 @@
     justify-content: center;
     flex-wrap: wrap;
     padding-top: 3rem;
+
+    @include mobile {
+      .tile {
+        width: 100vw;
+      }
+    }
+
+    @include tablet {
+      .tile {
+        width: 100vw;
+      }
+    }
   }
 
   .tile__description--mod {
