add gallery with photo

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import "./elements/homepage/services";
 @import "./elements/homepage/footer";
 @import "./elements/subpages/contact";
+@import "./elements/subpages/gallery";
 
 * {
   box-sizing: border-box;
