--- a/scss/elements/subpages/_gallery.scss
+++ b/scss/elements/subpages/_gallery.scss
@@ -1,3 +1,9 @@
+.row {
+  @include mobile {
+    justify-content: center;
+    align-items: center;
+  }
+}
 .container.gallery-container {
   background-color: #fff;
   color: #35373a;
@@ -8,7 +14,7 @@
 .gallery-container h1 {
   text-align: center;
   margin-top: 50px;
-  font-family: "Droid Sans", sans-serif;
+  font-family: $main-font-1;
   font-weight: bold;
 }
 
@@ -20,13 +26,12 @@
 }
 
 .tz-gallery {
-  padding: 40px;
   margin: 0 auto;
 }
 
 /* Override bootstrap column paddings */
 .tz-gallery .row > div {
-  padding: 2px;
+  padding: 4px;
 }
 
 .tz-gallery .lightbox img {
@@ -70,10 +75,4 @@
 
 .baguetteBox-button {
   background-color: transparent !important;
-}
-
-@media (max-width: 768px) {
-  body {
-    padding: 0;
-  }
 }
