--- a/scss/elements/subpages/_contact.scss
+++ b/scss/elements/subpages/_contact.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: $--bg-tile-1;
 
   .contact__title {
     font: normal 700 3.5em $main-font-1;
